libs/@local/hashql/eval/tests/ui/graph/read/entity/if-filter.jsonc
//@ run: fail
//@ description: Test if filter with branch fails
// biome-ignore format: readability
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["if", {"#literal": true}, {"#literal": true}, {"#literal": false}]
      //~^ ERROR conditional expressions are not supported in filter contexts
    ]
  ]
]
